tests/errors/raise-uncaught.au
def hello() {
    raise "Hello World\n";
}

hello();